<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/action_download_tiles"
          android:icon="@drawable/ic_download_file"
          android:title="@string/action_download_tiles"
          android:showAsAction="ifRoom" />
    <item android:id="@+id/action_login"
          android:icon="@drawable/login_door"
          android:title="@string/action_login"
          android:showAsAction="ifRoom" />
    <item android:id="@+id/action_logout"
          android:icon="@drawable/logout_door"
          android:title="@string/action_logout"          
          android:showAsAction="ifRoom" />
    <item android:id="@+id/action_center_and_follow"
          android:icon="@android:drawable/ic_menu_mylocation"
          android:title="@string/action_center"
          android:showAsAction="ifRoom" />
    <item android:id="@+id/action_download_claims"
          android:icon="@android:drawable/ic_menu_myplaces"
          android:title="@string/action_download_claims"
          android:showAsAction="ifRoom" />
    <item android:id="@+id/map_provider_google_normal"
          android:title="@string/map_provider_google_normal"
          android:showAsAction="never" />
    <item android:id="@+id/map_provider_google_hybrid"
          android:title="@string/map_provider_google_hybrid"
          android:showAsAction="never" />
    <item android:id="@+id/map_provider_google_satellite"
          android:title="@string/map_provider_google_satellite"
          android:showAsAction="never" />
    <item android:id="@+id/map_provider_google_terrain"
          android:title="@string/map_provider_google_terrain"
          android:showAsAction="never" />
    <item android:id="@+id/map_provider_osm_mapnik"
          android:title="@string/map_provider_osm_mapnik"
          android:showAsAction="never" />
    <item android:id="@+id/map_provider_osm_mapquest"
          android:title="@string/map_provider_osm_mapquest"
          android:showAsAction="never" />
    <item android:id="@+id/map_provider_local_tiles"
          android:title="@string/map_provider_local_tiles"
          android:showAsAction="never" />
    <item android:id="@+id/map_provider_geoserver"
          android:title="@string/map_provider_geoserver"
          android:showAsAction="never" />
</menu>