<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item android:id="@+id/action_new"
          android:icon="@android:drawable/ic_input_add"
          android:title="@string/action_new"
          android:showAsAction="ifRoom" />    
    <item android:id="@+id/action_rotate"
          android:icon="@android:drawable/ic_menu_always_landscape_portrait"
          android:title="@string/action_rotate"
          android:showAsAction="ifRoom" />    
	<item android:id="@+id/action_stop_rotating"
          android:icon="@drawable/ic_menu_block"
          android:title="@string/action_stop_rotating"
          android:showAsAction="ifRoom" />    
    <item android:id="@+id/action_center_and_follow"
          android:icon="@android:drawable/ic_menu_mylocation"
          android:title="@string/action_center"
          android:showAsAction="ifRoom" />    
    <item android:id="@+id/action_new_picture"
          android:icon="@android:drawable/ic_menu_camera"
          android:title="@string/action_new_picture"
          android:showAsAction="ifRoom" />
    <item android:id="@+id/map_provider_google_normal"
          android:title="@string/map_provider_google_normal"
          android:showAsAction="never" />
    <item android:id="@+id/map_provider_google_hybrid"
          android:title="@string/map_provider_google_hybrid"
          android:showAsAction="never" />
    <item android:id="@+id/map_provider_google_satellite"
          android:title="@string/map_provider_google_satellite"
          android:showAsAction="never" />
    <item android:id="@+id/map_provider_google_terrain"
          android:title="@string/map_provider_google_terrain"
          android:showAsAction="never" />
    <item android:id="@+id/map_provider_osm_mapnik"
          android:title="@string/map_provider_osm_mapnik"
          android:showAsAction="never" />
    <item android:id="@+id/map_provider_osm_mapquest"
          android:title="@string/map_provider_osm_mapquest"
          android:showAsAction="never" />
    <item android:id="@+id/map_provider_local_tiles"
          android:title="@string/map_provider_local_tiles"
          android:showAsAction="never" />
    <item android:id="@+id/map_provider_geoserver"
          android:title="@string/map_provider_geoserver"
          android:showAsAction="never" />
</menu>
