<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    
   
    <item android:id="@+id/action_save"
          android:icon="@android:drawable/ic_menu_save"
          android:title="@string/action_save"
          android:showAsAction="ifRoom" 
          android:orderInCategory="1"/>    
    <item android:id="@+id/action_submit"
          android:icon="@android:drawable/ic_menu_send"
          android:title="@string/action_submit"
          android:showAsAction="ifRoom" 
          android:orderInCategory="2"/>
    <item android:id="@+id/action_export"
          android:icon="@android:drawable/ic_menu_upload"
          android:title="@string/action_export"
          android:showAsAction="ifRoom" 
          android:orderInCategory="3"/>
    <item android:id="@+id/action_login"
          android:icon="@drawable/login_door"
          android:title="@string/action_login"
          android:showAsAction="ifRoom" 
          android:orderInCategory="4"/>
    <item android:id="@+id/action_logout"
          android:icon="@drawable/ic_menu_set_as"
          android:title="@string/action_logout"          
          android:showAsAction="ifRoom" 
          android:orderInCategory="5"/>    
    <item android:id="@+id/action_print"
          android:icon="@drawable/ic_print"
          android:title="@string/action_print"          
          android:showAsAction="ifRoom" 
          android:orderInCategory="6"/>    
</menu>
