<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/action_new_attachment"
          android:icon="@android:drawable/ic_menu_gallery"
          android:title="@string/action_new_attachment"
          android:showAsAction="ifRoom" />
    <item android:id="@+id/action_new_picture"
          android:icon="@android:drawable/ic_menu_camera"
          android:title="@string/action_new_picture"
          android:showAsAction="ifRoom" />
    <item android:id="@+id/action_search"
          android:icon="@android:drawable/ic_menu_search"
          android:title="@string/action_search"
          android:showAsAction="ifRoom" />
    <item android:id="@+id/action_save"
          android:icon="@android:drawable/ic_menu_save"
          android:title="@string/action_save"
          android:showAsAction="ifRoom" />    
    <item android:id="@+id/action_submit"
          android:icon="@android:drawable/ic_menu_send"
          android:title="@string/action_submit"
          android:showAsAction="ifRoom" />    
</menu>