<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment_claim_details"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/light_background_opentenure"
    android:baselineAligned="false"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:background="@color/light_background_opentenure"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/claim_name_input_field"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/light_background_opentenure"
            android:hint="@string/claim_name"
            android:inputType="text" >
        </EditText>

        <EditText
            android:id="@+id/first_name_input_field"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/light_background_opentenure"
            android:hint="@string/first_name"
            android:inputType="text" >
        </EditText>

        <EditText
            android:id="@+id/last_name_input_field"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/light_background_opentenure"
            android:hint="@string/last_name"
            android:inputType="text" >
        </EditText>

        <EditText
            android:id="@+id/date_of_birth_input_field"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/light_background_opentenure"
            android:hint="@string/date_of_birth"
            android:inputType="date" >
        </EditText>

        <EditText
            android:id="@+id/place_of_birth_input_field"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/light_background_opentenure"
            android:hint="@string/place_of_birth"
            android:inputType="text" >
        </EditText>

        <EditText
            android:id="@+id/postal_address_input_field"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/light_background_opentenure"
            android:hint="@string/postal_address"
            android:inputType="textPostalAddress" >
        </EditText>

        <EditText
            android:id="@+id/email_address_input_field"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/light_background_opentenure"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress" >
        </EditText>

        <EditText
            android:id="@+id/mobile_phone_number_input_field"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/light_background_opentenure"
            android:hint="@string/mobile_phone_number"
            android:inputType="phone" >
        </EditText>

        <EditText
            android:id="@+id/contact_phone_number_input_field"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/light_background_opentenure"
            android:hint="@string/contact_phone_number"
            android:inputType="phone" >
        </EditText>
        </LinearLayout>


</LinearLayout>